<resources>

    <!--Titolo dell'app -->
    <string name="app_name">RottenAppleDesign</string>

    <!--Titoli delle Activity -->
    <string name="Cards">Cards</string>
    <string name="TDWorld">3D World</string>
    <string name="Colors">Colors</string>
    <string name="Images">Images</string>

    <!--Stringhe relative ad activity_tdworld.xml -->
    <string name="title_componente">Componente</string>
    <string name="title_elevazione">Elevazione</string>
    <string name="title_button">Raised button: 2dp</string>
    <string name="desc_button">Elevazione tipica del Raised button o di un button generico</string>
    <string name="title_fab">FAB: 6dp</string>
    <string name="desc_fab">Unico bottone ad avere elevazione di 6dp</string>
    <string name="title_switch">Switch: 1dp</string>
    <string name="desc_switch">Uno dei pochi elementi con solo 1dp di elevazione</string>
    <string name="title_radio_check">Radio Button/Checkbox: 1dp</string>
    <string name="desc_radio_check">Non essendoci indicazioni precise ha un elevazione di 1dp</string>
    <string name="title_picker">Picker: 24dp</string>
    <string name="desc_picker">Assieme al Dialog è il componente più elevato</string>

    <!-- Stringhe varie -->
    <string name="action_settings">Cancella le scritte per lo scroll</string>
    <string name="title_activity_add_item">Inserisci una stringa</string>
    <string name="expand_text">Testo per far espandere la card</string>
    <string name="FAB_transition">FAB</string>
    <string name="esa">#9B26AF </string>
    <string name="buttonSelect">Seleziona il componente!</string>

    <!-- Stringhe per le Card -->
    <string name="button_action_card">CLICCA QUI</string>
    <string name="button_expand">EXPAND</string>
    <string name="testo_espanso">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
    </string>

    <!-- Stringhe per il Navigation Drawer-->
    <string name="drawer_button">Button</string>
    <string name="drawer_3d">3D World</string>
    <string name="drawer_cards">Cards</string>
    <string name="drawer_colors">Colors</string>
    <string name="drawer_images">Images</string>
    <string name="drawer_tabs">Tabs</string>

    <!-- STRINGHE PER I TABS -->

    <!-- List -->
    <string-array name="list">
        <item>TITOLO</item>
        <item>Breve Descrizione</item>
        <item>INFORMAZIONI RELATIVE, TANTE INFORMAZIONI RELATIVE, MA PROPRIO TANTE TANTE
            INFORMAZIONI RELATIVE ALL\' ELEMENTO SELEZIONATO COL TOCCO DALL\' UTENTE
            CHE STA UTILIZZANDO L\' APPLICAZIONE ROTTEN APPLE DESIGN</item>
    </string-array>

    <!-- Cards -->
    <string-array name="descrizione_sviluppatori">
        <item>Ragazzo che arriva dalla lontana Sardegna che approda nella fredda e confusionaria
        città padovana, alla ricerca dei misteri dell\'informatica (passando prima per analisi) e
        alla conquista di prede femminili grazie alla sua impossibile bellezza.</item>
        <item>Potrebbe essere sopranominato \"Faccia d\' Angelo\", ma sarebbe una grossa offesa
        per il vecchio boss mafioso veneto e probabilmente questo lo farebbe arrabbiare,
        in quanto Marco è davvero un bravo ragazzo. Meglio chiamarlo semplicemnte Spiando.</item>
        <item>Questo ragazzo dallo sgaurdo perso, è sempre affamato e bisogna costantemente
        dargli da mangiare per mantenerlo sazio, altrimenti si rischia di finire di essere
        il suo spuntino. Un modo per distrarlo , nel caso non si abbia cibo con se, è lanciargli
        una palla da rugby per distrarlo e riuscire a fuggire.</item>
    </string-array>
    >>>>>>> origin/master
</resources>
