<?xml version="1.0" encoding="utf-8"?>
<!--Activity che mostra alcuni componenti descrivendone
    il parametro elevation-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.diego.rottenappledesign.TDWorld">

    <!--Inserimento di una ScrollView per permettere
        lo scorrimento in verticale dello schermo-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!--Bottone normale -->
            <Button
                android:id="@+id/button_normale"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/colorPrimary"
                android:elevation="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_below="@+id/text_titolo_componente"
                android:layout_alignEnd="@+id/text_titolo_componente" />

            <!--Floating Button -->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_floating"
                android:height="48dp"
                android:clipToPadding="true"
                android:elevation="6dp"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/date_picker"
                android:layout_marginTop="170dp" />

            <!--Bottone switch -->
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_component"
                android:elevation="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button_floating"
                android:layout_below="@id/button_floating"
                android:layout_marginTop="34dp"/>

            <!--Radio Button -->
            <RadioButton
                android:id="@+id/radio_button"
                android:elevation="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/button_normale"
                android:layout_below="@id/switch_component"
                android:layout_marginTop="34dp" />

            <!--Checkbox -->
            <CheckBox
                android:id="@+id/checkBox"
                android:elevation="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_alignTop="@id/radio_button"
                android:layout_toEndOf="@id/radio_button"/>

            <!--Date Picker -->
            <DatePicker
                android:id="@+id/date_picker"
                android:elevation="24dp"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_below="@id/radio_button"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp" />

            <!--TextView che specificano il titolo:
                componente o elevazione -->
            <TextView
                android:id="@+id/text_titolo_componente"
                android:text="@string/title_componente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/button_floating" />
            <TextView
                android:id="@+id/text_titolo_elevazione"
                android:text="@string/title_elevazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_normale"
                android:layout_alignEnd="@+id/text_title_fab" />

            <!--TextView relative al bottone normale-->
            <TextView
                android:id="@+id/text_title_button"
                android:text="@string/title_button"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_desc_button"
                android:layout_alignStart="@+id/text_desc_button" />
            <TextView
                android:id="@+id/text_desc_button"
                android:text="@string/desc_button"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:layout_alignBottom="@+id/button_normale"
                android:layout_toEndOf="@+id/date_picker" />

            <!--TextView relative al floating button-->
            <TextView
                android:id="@+id/text_title_fab"
                android:text="@string/title_fab"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_desc_fab"
                android:layout_alignStart="@+id/text_desc_button" />

            <TextView
                android:id="@+id/text_desc_fab"
                android:text="@string/desc_fab"
                android:textSize="12sp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/button_floating"
                android:layout_alignStart="@+id/text_title_fab"
                android:layout_alignEnd="@+id/text_desc_switch" />

            <!--TextView relative allo switch-->
            <TextView
                android:text="@string/title_switch"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_above="@+id/text_desc_switch"
                android:layout_alignStart="@+id/text_desc_switch" />
            <TextView
                android:id="@+id/text_desc_switch"
                android:text="@string/desc_switch"
                android:textSize="12sp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/text_title_fab"
                android:layout_alignBottom="@id/switch_component" />

            <!--TextView relative al checkbox e al radio button-->
            <TextView
                android:id="@+id/textView_tit_radio"
                android:text="@string/title_radio_check"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/checkBox"
                android:layout_alignStart="@id/text_title_fab"
                android:layout_alignTop="@id/checkBox"/>
            <TextView
                android:text="@string/desc_radio_check"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:layout_below="@id/textView_tit_radio"
                android:layout_alignStart="@id/text_title_fab"/>

            <!--TextView relative al date picker-->
            <TextView
                android:id="@+id/text_title_picker"
                android:text="@string/title_picker"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/date_picker"
                android:layout_alignEnd="@+id/text_title_button" />
            <TextView
                android:text="@string/desc_picker"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:layout_below="@+id/text_title_picker"
                android:layout_alignStart="@+id/text_title_picker"
                android:layout_alignEnd="@+id/text_desc_switch" />

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
